# scikit-learn-upgrade

./: .gitignore  README.rst  meson.build  pyproject.toml
lib_present/: report.ipynb
sklearn_upgrade/: __init__.py  _config.py  base.py  calibration.py  conftest.py  discriminant_analysis.py  dummy.py  exceptions.py  isotonic.py  kernel_approximation.py  kernel_ridge.py  meson.build  multiclass.py  multioutput.py  naive_bayes.py  pipeline.py  random_projection.py
sklearn_upgrade/__check_build/: __init__.py  meson.build
sklearn_upgrade/_build_utils/: version.py
sklearn_upgrade/_loss/: __init__.py  link.py  loss.py  meson.build
sklearn_upgrade/_loss/tests/: test_link.py  test_loss.py
sklearn_upgrade/cluster/: __init__.py  _affinity_propagation.py  _agglomerative.py  _bicluster.py  _birch.py  _bisect_k_means.py  _dbscan.py  _dbscan_inner.pyx  _feature_agglomeration.py  _hierarchical_fast.pxd  _hierarchical_fast.pyx  _k_means_common.pyx  _k_means_elkan.pyx  _k_means_lloyd.pyx  _kmeans.py  _mean_shift.py  _optics.py  _spectral.py  meson.build
sklearn_upgrade/compose/: __init__.py  _column_transformer.py  _target.py
sklearn_upgrade/covariance/: __init__.py  _elliptic_envelope.py  _empirical_covariance.py  _graph_lasso.py  _robust_covariance.py  _shrunk_covariance.py
sklearn_upgrade/cross_decomposition/: __init__.py  _pls.py
sklearn_upgrade/datasets/: __init__.py  _arff_parser.py  _base.py  _california_housing.py  _covtype.py  _kddcup99.py  _lfw.py  _olivetti_faces.py  _openml.py  _rcv1.py  _samples_generator.py  _species_distributions.py  _svmlight_format_io.py  _twenty_newsgroups.py  meson.build
sklearn_upgrade/decomposition/: __init__.py  _base.py  _dict_learning.py  _factor_analysis.py  _fastica.py  _incremental_pca.py  _kernel_pca.py  _lda.py  _nmf.py  _online_lda_fast.pyx  _pca.py  _sparse_pca.py  _truncated_svd.py  meson.build
sklearn_upgrade/ensemble/: __init__.py  _bagging.py  _base.py  _forest.py  _gb.py  _gradient_boosting.pyx  _iforest.py  _stacking.py  _voting.py  _weight_boosting.py  meson.build
sklearn_upgrade/experimental/: enable_halving_search_cv.py  enable_hist_gradient_boosting.py  enable_iterative_imputer.py
sklearn_upgrade/feature_extraction/: __init__.py  _dict_vectorizer.py  _hash.py  _hashing_fast.pyx  image.py  meson.build  text.py
sklearn_upgrade/feature_selection/: __init__.py  _base.py  _from_model.py  _mutual_info.py  _rfe.py  _sequential.py  _univariate_selection.py  _variance_threshold.py
sklearn_upgrade/frozen/: __init__.py  _frozen.py
sklearn_upgrade/gaussian_process/: __init__.py  _gpc.py  _gpr.py  kernels.py
sklearn_upgrade/impute/: __init__.py  _base.py  _iterative.py  _knn.py
sklearn_upgrade/inspection/: __init__.py  _partial_dependence.py  _permutation_importance.py
sklearn_upgrade/linear_model/: __init__.py  _base.py  _bayes.py  _cd_fast.pyx  _coordinate_descent.py  _huber.py  _least_angle.py  _linear_loss.py  _logistic.py  _omp.py  _passive_aggressive.py  _perceptron.py  _quantile.py  _ransac.py  _ridge.py  _sag.py  _sag_fast.pyx.tp  _sgd_fast.pyx.tp  _stochastic_gradient.py  _theil_sen.py  meson.build
sklearn_upgrade/manifold/: __init__.py  _barnes_hut_tsne.pyx  _classical_mds.py  _isomap.py  _locally_linear.py  _mds.py  _spectral_embedding.py  _t_sne.py  _utils.pyx  meson.build
sklearn_upgrade/metrics/: __init__.py  _base.py  _classification.py  _dist_metrics.pxd.tp  _dist_metrics.pyx.tp  _pairwise_fast.pyx  _ranking.py  _regression.py  _scorer.py  meson.build  pairwise.py
sklearn_upgrade/mixture/: __init__.py  _base.py  _bayesian_mixture.py  _gaussian_mixture.py
sklearn_upgrade/model_selection/: __init__.py  _classification_threshold.py  _plot.py  _search.py  _search_successive_halving.py  _split.py  _validation.py
sklearn_upgrade/neighbors/: __init__.py  _base.py  _binary_tree.pxi.tp  _classification.py  _graph.py  _kde.py  _lof.py  _nca.py  _nearest_centroid.py  _partition_nodes.pxd  _quad_tree.pxd  _quad_tree.pyx  _regression.py  _unsupervised.py  meson.build
sklearn_upgrade/neural_network/: __init__.py  _multilayer_perceptron.py  _rbm.py
sklearn_upgrade/preprocessing/: __init__.py  _csr_polynomial_expansion.pyx  _data.py  _discretization.py  _encoders.py  _function_transformer.py  _label.py  _polynomial.py  _target_encoder.py  _target_encoder_fast.pyx  meson.build
sklearn_upgrade/semi_supervised/: __init__.py  _label_propagation.py  _self_training.py
sklearn_upgrade/svm/: __init__.py  _base.py  _bounds.py  _classes.py  _liblinear.pxi  _liblinear.pyx  _libsvm.pxi  _libsvm.pyx  _libsvm_sparse.pyx  meson.build
sklearn_upgrade/tests/: metadata_routing_common.py  test_base.py  test_build.py  test_calibration.py  test_check_build.py  test_common.py  test_config.py  test_discriminant_analysis.py  test_docstring_parameters.py  test_docstring_parameters_consistency.py  test_docstrings.py  test_dummy.py  test_init.py  test_isotonic.py  test_kernel_approximation.py  test_kernel_ridge.py  test_metadata_routing.py  test_metaestimators.py  test_metaestimators_metadata_routing.py  test_min_dependencies_readme.py  test_multiclass.py  test_multioutput.py  test_naive_bayes.py  test_pipeline.py  test_public_functions.py  test_random_projection.py
sklearn_upgrade/tree/: __init__.py  _classes.py  _criterion.pxd  _criterion.pyx  _export.py  _partitioner.pxd  _partitioner.pyx  _splitter.pxd  _splitter.pyx  _tree.pxd  _tree.pyx  _utils.pxd  _utils.pyx  meson.build
sklearn_upgrade/utils/: __init__.py  _arpack.py  _array_api.py  _available_if.py  _bunch.py  _chunking.py  _cython_blas.pyx  _encode.py  _fast_dict.pxd  _fast_dict.pyx  _heap.pxd  _heap.pyx  _indexing.py  _mask.py  _metadata_requests.py  _missing.py  _mocking.py  _openmp_helpers.pxd  _openmp_helpers.pyx  _param_validation.py  _plotting.py  _pprint.py  _random.pxd  _random.pyx  _response.py  _seq_dataset.pxd.tp  _seq_dataset.pyx.tp  _set_output.py  _show_versions.py  _sorting.pxd  _sparse.py  _tags.py  _testing.py  _unique.py  _vector_sentinel.pxd  _weight_vector.pyx.tp  arrayfuncs.pyx  class_weight.py  deprecation.py  discovery.py  (+17 more)
(+296 files in other folders)
