[project]
name = "scikit-learn-upgrade"
dynamic = ["version"]
description = "A set of python modules for machine learning and data mining"
readme = "README.rst"
maintainers = [
    {name = "sklearn-upgrade developers", email="matveyrus06@bk.ru"},
]
dependencies = [
  "numpy>=1.24.1",
  "scipy>=1.10.0",
  "joblib>=1.3.0",
  "narwhals>=2.0.1",
  "threadpoolctl>=3.2.0",
]
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["COPYING"]
classifiers=[
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: C",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Development Status :: 5 - Production/Stable",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
homepage = "https://github.com/ProdUssr/scikit-learn-upgrade"
source = "https://github.com/ProdUssr/scikit-learn-upgrade"
download = "https://pypi.org/project/scikit-learn-upgrade/#files"
tracker = "https://github.com/ProdUssr/scikit-learn-upgrade/issues"
"release notes" = "https://github.com/ProdUssr/scikit-learn-upgrade/releases"

[project.optional-dependencies]
build = ["numpy>=1.24.1", "scipy>=1.10.0", "cython>=3.1.2", "meson-python>=0.17.1"]
install = ["numpy>=1.24.1", "scipy>=1.10.0", "joblib>=1.3.0", "narwhals>=2.0.1", "threadpoolctl>=3.2.0"]
benchmark = ["matplotlib>=3.6.1", "pandas>=1.5.0", "memory_profiler>=0.57.0"]
docs = [
    "matplotlib>=3.6.1",
    "scikit-image>=0.22.0",
    "pandas>=1.5.0",
    "seaborn>=0.13.0",
    "memory_profiler>=0.57.0",
    "sphinx>=7.3.7",
    "sphinx-copybutton>=0.5.2",
    "sphinx-gallery>=0.17.1",
    "numpydoc>=1.2.0",
    "Pillow>=10.1.0",
    "pooch>=1.8.0",
    "sphinx-prompt>=1.4.0",
    "sphinxext-opengraph>=0.9.1",
    "plotly>=5.18.0",
    "polars>=0.20.30",
    "sphinx-design>=0.6.0",
    "sphinxcontrib-sass>=0.3.4",
    "pydata-sphinx-theme>=0.15.3",
    "sphinx-remove-toctrees>=1.0.0.post1",
    "towncrier>=24.8.0",
]
examples = [
    "matplotlib>=3.6.1",
    "scikit-image>=0.22.0",
    "pandas>=1.5.0",
    "seaborn>=0.13.0",
    "pooch>=1.8.0",
    "plotly>=5.18.0",
]
tests = [
    "matplotlib>=3.6.1",
    "pandas>=1.5.0",
    "pytest>=7.1.2",
    "pytest-cov>=2.9.0",
    "ruff>=0.12.2",
    "mypy>=1.15",
    "pyamg>=5.0.0",
    "polars>=0.20.30",
    "pyarrow>=13.0.0",
    "numpydoc>=1.2.0",
    "pooch>=1.8.0",
]
maintenance = ["conda-lock==3.0.1"]

[build-system]
build-backend = "mesonpy"
# Minimum requirements for the build system to execute.
requires = [
    "meson-python>=0.17.1",
    "cython>=3.1.2",
    "numpy>=2",
    "scipy>=1.10.0",
]

[tool.pytest.ini_options]
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS"
testpaths = "sklearn_upgrade"
addopts = [
    "--disable-pytest-warnings",
    "--color=yes",
    "--import-mode=importlib",
]
# Used by pytest-run-parallel when testing thread-safety (with or without GIL).
thread_unsafe_fixtures = [
  "hide_available_pandas",  # relies on monkeypatching
  "tmp_path",  # does not isolate temporary directories across threads
  "pyplot",  # some tests might mutate some shared state of pyplot.
]
# 10 min timeout per test: in case of timeout, dump the tracebacks of all
# threads and terminate the whole test session if a test hangs for more than 10
# min (likely due to a deadlock).
# The second option requires pytest 9.0+ to be active.
faulthandler_timeout = 600
faulthandler_exit_on_timeout = true


[tool.ruff]
line-length = 88
exclude=[
    ".eggs",
    ".git",
    ".mypy_cache",
    ".vscode",
    "__pycache__",
    "build",
    "dist",
    "sklearn_upgrade/externals",
    "doc/_build",
    "doc/auto_examples",
    "asv_benchmarks/env",
    "asv_benchmarks/html",
    "asv_benchmarks/results",
    "asv_benchmarks/benchmarks/cache",
]

[tool.ruff.lint]
# This enables us to use CPY001: copyright header check
preview = true
# This enables us to use the explicit preview rules that we want only
explicit-preview-rules = true
# all rules can be found here: https://docs.astral.sh/ruff/rules/
extend-select = ["E501", "W", "I", "CPY001", "PGH", "RUF", "TID252"]
ignore=[
    # do not assign a lambda expression, use a def
    "E731",
    # do not use variables named 'l', 'O', or 'I'
    "E741",
    # E721 gives many false positives.
    # Use `is` and `is not` for type comparisons, or `isinstance()` for
    # isinstance checks
    "E721",
    # We don't care much about F841.
    # Local variable ... is assigned to but never used
    "F841",
    # some RUF rules trigger too many changes
    "RUF002",
    "RUF003",
    "RUF005",
    "RUF012",
    "RUF015",
    "RUF021",
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "\\#\\ Authors:\\ The\\ scikit\\-learn\\ developers\\\r?\\\n\\#\\ SPDX\\-License\\-Identifier:\\ BSD\\-3\\-Clause"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# It's fine not to put the import at the top of the file in the examples
# folder.
"examples/*"=["E402"]
"doc/conf.py"=["E402"]
"**/tests/*"=["CPY001"]
"asv_benchmarks/*"=["CPY001", "TID252"]
"benchmarks/*"=["CPY001"]
"doc/*"=["CPY001"]
"build_tools/*"=["CPY001"]
"sklearn_upgrade/_build_utils/*"=["CPY001"]
"maint_tools/*"=["CPY001"]
".spin/*"=["CPY001"]
".github/*"=["CPY001"]
# __doc__ is too long (>4096 chars) and therefore false positive on copyright check
"examples/model_selection/plot_precision_recall.py"=["CPY001"]
"examples/svm/plot_rbf_parameters.py"=["CPY001"]
# __all__ has un-imported names
"sklearn_upgrade/__init__.py"=["F822"]
"sklearn_upgrade/utils/_metadata_requests.py"=["CPY001"]

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
exclude = "^sklearn_upgrade/externals"

[[tool.mypy.overrides]]
module = ["joblib.*", "sklearn_upgrade.externals.*"]
follow_imports = "skip"

[tool.cython-lint]
# Ignore the same error codes as ruff
# + E501 (line too long) because keeping it < 88 in cython
# often makes code less readable.
ignore = [
    # multiple spaces/tab after comma
    'E24',
    # line too long
    'E501',
    # do not assign a lambda expression, use a def
    'E731',
    # do not use variables named 'l', 'O', or 'I'
    'E741',
    # line break before binary operator
    'W503',
    # line break after binary operator
    'W504',
]
# Exclude files are generated from tempita templates
exclude= '''
(
    asv_benchmarks/
  | sklearn_upgrade/_loss/_loss.pyx
  | sklearn_upgrade/linear_model/_sag_fast.pyx
  | sklearn_upgrade/linear_model/_sgd_fast.pyx
  | sklearn_upgrade/utils/_seq_dataset.pyx
  | sklearn_upgrade/utils/_seq_dataset.pxd
  | sklearn_upgrade/utils/_weight_vector.pyx
  | sklearn_upgrade/utils/_weight_vector.pxd
  | sklearn_upgrade/metrics/_dist_metrics.pyx
  | sklearn_upgrade/metrics/_dist_metrics.pxd
  | sklearn_upgrade/metrics/_pairwise_distances_reduction/_argkmin.pxd
  | sklearn_upgrade/metrics/_pairwise_distances_reduction/_argkmin.pyx
  | sklearn_upgrade/metrics/_pairwise_distances_reduction/_argkmin_classmode.pyx
  | sklearn_upgrade/metrics/_pairwise_distances_reduction/_base.pxd
  | sklearn_upgrade/metrics/_pairwise_distances_reduction/_base.pyx
  | sklearn_upgrade/metrics/_pairwise_distances_reduction/_datasets_pair.pxd
  | sklearn_upgrade/metrics/_pairwise_distances_reduction/_datasets_pair.pyx
  | sklearn_upgrade/metrics/_pairwise_distances_reduction/_middle_term_computer.pxd
  | sklearn_upgrade/metrics/_pairwise_distances_reduction/_middle_term_computer.pyx
  | sklearn_upgrade/metrics/_pairwise_distances_reduction/_radius_neighbors.pxd
  | sklearn_upgrade/metrics/_pairwise_distances_reduction/_radius_neighbors.pyx
)
'''

[tool.check-sdist]
# These settings should match .gitattributes
sdist-only = []
git-only = [".*", "asv_benchmarks", "benchmarks", "build_tools", "maint_tools"]
default-ignore = false

[tool.spin]
package = "sklearn_upgrade"  

[tool.spin.commands]
"Build" = [
  "spin.cmds.pip.install",
  "spin.cmds.meson.test",
  ".spin/cmds.py:clean",
]
"Documentation" = [
  "spin.cmds.meson.docs"
]

[tool.changelog-bot]
    [tool.changelog-bot.towncrier_changelog]
        enabled = true
        verify_pr_number = true
        changelog_noop_label = "No Changelog Needed"
        whatsnew_pattern = 'doc/whatsnew/upcoming_changes/[^/]+/\d+\.[^.]+\.rst'

[tool.codespell]
skip = ["./.git", "*.svg", "./.mypy_cache", "*sklearn_upgrade/feature_extraction/_stop_words.py", "*sklearn_upgrade/feature_extraction/tests/test_text.py", "./doc/_build", "./doc/auto_examples", "./doc/modules/generated"]
ignore-words = "build_tools/codespell_ignore_words.txt"

[tool.towncrier]
    package = "sklearn_upgrade"
    filename = "doc/whats_new/v1.9.rst"
    single_file = true
    directory = "doc/whats_new/upcoming_changes"
    issue_format = ":pr:`{issue}`"
    template = "doc/whats_new/upcoming_changes/towncrier_template.rst.jinja2"
    all_bullets = false

    [[tool.towncrier.type]]
        directory = "major-feature"
        name = "|MajorFeature|"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "feature"
        name = "|Feature|"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "efficiency"
        name = "|Efficiency|"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "enhancement"
        name = "|Enhancement|"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "fix"
        name = "|Fix|"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "api"
        name = "|API|"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "other"
        name = ""
        showcontent = true

    [[tool.towncrier.section]]
        name = "Security"
        path = "security"

    [[tool.towncrier.section]]
        name = "Changed models"
        path = "changed-models"

    [[tool.towncrier.section]]
        name = "Changes impacting many modules"
        path = "many-modules"

    [[tool.towncrier.section]]
        name = "Support for Array API"
        path = "array-api"

    [[tool.towncrier.section]]
        name = "Metadata routing"
        path = "metadata-routing"

    [[tool.towncrier.section]]
        name = "custom-top-level"
        path = "custom-top-level"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.base`"
        path = "sklearn_upgrade.base"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.calibration`"
        path = "sklearn_upgrade.calibration"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.cluster`"
        path = "sklearn_upgrade.cluster"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.compose`"
        path = "sklearn_upgrade.compose"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.covariance`"
        path = "sklearn_upgrade.covariance"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.cross_decomposition`"
        path = "sklearn_upgrade.cross_decomposition"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.datasets`"
        path = "sklearn_upgrade.datasets"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.decomposition`"
        path = "sklearn_upgrade.decomposition"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.discriminant_analysis`"
        path = "sklearn_upgrade.discriminant_analysis"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.dummy`"
        path = "sklearn_upgrade.dummy"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.ensemble`"
        path = "sklearn_upgrade.ensemble"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.exceptions`"
        path = "sklearn_upgrade.exceptions"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.feature_extraction`"
        path = "sklearn_upgrade.feature_extraction"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.feature_selection`"
        path = "sklearn_upgrade.feature_selection"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.frozen`"
        path = "sklearn_upgrade.frozen"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.gaussian_process`"
        path = "sklearn_upgrade.gaussian_process"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.impute`"
        path = "sklearn_upgrade.impute"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.inspection`"
        path = "sklearn_upgrade.inspection"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.isotonic`"
        path = "sklearn_upgrade.isotonic"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.kernel_approximation`"
        path = "sklearn_upgrade.kernel_approximation"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.kernel_ridge`"
        path = "sklearn_upgrade.kernel_ridge"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.linear_model`"
        path = "sklearn_upgrade.linear_model"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.manifold`"
        path = "sklearn_upgrade.manifold"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.metrics`"
        path = "sklearn_upgrade.metrics"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.mixture`"
        path = "sklearn_upgrade.mixture"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.model_selection`"
        path = "sklearn_upgrade.model_selection"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.multiclass`"
        path = "sklearn_upgrade.multiclass"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.multioutput`"
        path = "sklearn_upgrade.multioutput"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.naive_bayes`"
        path = "sklearn_upgrade.naive_bayes"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.neighbors`"
        path = "sklearn_upgrade.neighbors"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.neural_network`"
        path = "sklearn_upgrade.neural_network"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.pipeline`"
        path = "sklearn_upgrade.pipeline"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.preprocessing`"
        path = "sklearn_upgrade.preprocessing"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.random_projection`"
        path = "sklearn_upgrade.random_projection"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.semi_supervised`"
        path = "sklearn_upgrade.semi_supervised"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.svm`"
        path = "sklearn_upgrade.svm"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.tree`"
        path = "sklearn_upgrade.tree"

    [[tool.towncrier.section]]
        name = ":mod:`sklearn_upgrade.utils`"
        path = "sklearn_upgrade.utils"
